<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historial"
        android:id="@+id/titulo3"
        android:layout_gravity="center_horizontal"
        android:capitalize="words"
        android:textColor="#4052b5"
        android:textSize="38sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombrePaciente"
        android:id="@+id/nombrePaciente"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/titulo3"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textColor="#4052b5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntaje"
        android:id="@+id/puntaje"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="28sp"
        android:textColor="#4052b5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/puntaje"
        android:layout_toRightOf="@+id/puntaje"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:allowUndo="false"
        android:clickable="true"
        android:editable="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grado"
        android:id="@+id/grado"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="28sp"
        android:textColor="#4052b5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_toRightOf="@+id/grado"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:editable="true"
        android:clickable="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/volver"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:background="#4052b5" />
</RelativeLayout>