<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_historia" tools:context="com.nicole.toc.aplicationtoc.Historia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/historial"
        android:inputType="text"
        android:textColor="#4052b5"
        android:textSize="38sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombrePaciente"
        android:text="@string/nombrePaciente"
        android:textSize="32sp"
        android:textColor="#4052b5"
        android:layout_below="@+id/titulo3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntaje"
        android:id="@+id/puntaje"
        android:textColor="#4052b5"
        android:textSize="32sp"
        android:layout_below="@+id/nombrePaciente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grado"
        android:id="@+id/grado"
        android:textColor="#4052b5"
        android:textSize="32sp"
        android:layout_below="@+id/puntaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/puntaje2"
        android:layout_alignTop="@+id/puntaje"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_toRightOf="@+id/puntaje"
        android:layout_toEndOf="@+id/puntaje" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grado2"
        android:layout_alignTop="@+id/grado"
        android:layout_toRightOf="@+id/grado"
        android:layout_alignRight="@+id/puntaje2"
        android:layout_alignEnd="@+id/puntaje2"
        android:inputType="text"
        android:editable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/volver"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/grado2"
        android:layout_centerHorizontal="true"
        android:background="#4052b5" />

</RelativeLayout>
