<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nicole.toc.aplicationtoc.NuevoPaciente"
    tools:showIn="@layout/activity_nuevo_paciente">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:id="@+id/textView"
        android:textSize="38sp"
        android:textColor="#4052b5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombrePaciente"
        android:id="@+id/NombrePaciente"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:textSize="24sp"
        android:textColor="#4052b5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CampoVacio"
        android:layout_below="@+id/NombrePaciente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ApellidoPaciente"
        android:id="@+id/ApellidoPaciente"
        android:layout_below="@+id/CampoVacio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#4052b5"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CampoVacioAP"
        android:layout_below="@+id/ApellidoPaciente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EdadPaciente"
        android:id="@+id/EdadPaciente"
        android:layout_below="@+id/CampoVacioAP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:linksClickable="false"
        android:textColor="#4052b5"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edadPaciente"
        android:layout_below="@+id/EdadPaciente"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearPaciente"
        android:id="@+id/CrearPaciente"
        android:layout_marginTop="49dp"
        android:background="#4052b5"
        android:layout_below="@+id/edadPaciente"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
