<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_historial"
    tools:context="com.nicole.toc.aplicationtoc.historial">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo3"
        android:id="@+id/titulo3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#4052b5"
        android:textSize="38sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ListaPaciente"
        android:layout_above="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/puntaje"
        android:id="@+id/puntaje"
        android:textColor="#4052b5"
        android:textSize="32sp"
        android:layout_below="@+id/titulo3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="160dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/grado"
        android:id="@+id/grado"
        android:layout_below="@+id/puntaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#4052b5"
        android:textSize="32sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/grado"
        android:layout_toRightOf="@+id/puntaje"
        android:layout_alignRight="@+id/titulo3"
        android:layout_alignEnd="@+id/titulo3"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_alignBottom="@+id/grado"
        android:layout_toRightOf="@+id/grado"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/volver"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/grado"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="#4052b5" />
</RelativeLayout>
